<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_manager</name>
  <version>0.1.0</version>
  <description>A package handling the calibration of wheel and manipulator motors.</description>
  <maintainer email="adik07m@gmail.com">Adam Marciniak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros_constants</depend>
  <depend>rclcpp_components</depend>
  <build_depend>libVescCan</build_depend>
  <build_depend>rex_interfaces</build_depend>
  <exec_depend>rex_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
